# LB3

./: .gitignore  CMakeLists.txt  README.md
src/: Arena.cpp  Arena.h  CMakeLists.txt  Direction.h  GameSession.cpp  GameSession.h  LightSource.cpp  LightSource.h  main.cpp
src/data/: GameStartParameters.cpp  GameStartParameters.h
src/data/game/: Agent.h  Arena.cpp  Arena.h  Direction.cpp  Direction.h  ID.h  LaserOrientation.h  MirrorType.h  ObstacleType.h  Vector2d.h
src/data/ui/: Color.cpp  Color.h  GameColor.cpp  GameColor.h  PlayerInputInfo.cpp  PlayerInputInfo.h
src/logic/: GameEventHandler.cpp  GameEventHandler.h
src/model/: Agent.cpp  Agent.h  Arena.cpp  Arena.h  Direction.cpp  Direction.h  ID.h  LaserOrientation.h  MirrorType.h  ObstacleType.h  Player.cpp  Player.h  Vector2d.h
src/model/obstacles/: Mirror.cpp  Mirror.h
src/rendering/: GameRenderer.cpp  GameRenderer.h
src/util/: ArenaCoordinateGenerator.cpp  ArenaCoordinateGenerator.h  DebugLogger.h  Logger.cpp  Logger.h  RandomIntGenerator.cpp  RandomIntGenerator.h
src/view/: GameColor.h  GameEventHandler.cpp  GameEventHandler.h  GameRenderer.cpp  GameRenderer.h  GameSession.cpp  GameSession.h  GameStartParameters.cpp  GameStartParameters.h  PlayerInputInfo.cpp
test/: CMakeLists.txt  IntegrationTest.cpp  VectorTest.cpp
